# Comparison-of-optimizers

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  Main.ipynb  README.md  model_utils.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: default.yaml  experiments.yaml
src/: data_loaders.py  run_main.py
src/core/: __init__.py  trainer.py  utils.py
src/models/: __init__.py  arch.py
src/optimization/: optimizers.py
tests/: test_model_utils.py
